# ZeldaAlttPSNESRecomp

./: .gitignore  .gitmodules  CMakeLists.txt  ENHANCEMENTS.md  ISSUES.md  README.md  RELEASE.md  WITHOUT_DISASM.md  build_oracle.bat  config.ini  debug_harness.py  snes9x_core.vcxproj  snesrecomp.pin  zelda.ini  zelda.sln
recomp/: bank00.cfg  bank01.cfg  bank02.cfg  bank04.cfg  bank05.cfg  bank06.cfg  bank07.cfg  bank08.cfg  bank09.cfg  bank0a.cfg  bank0b.cfg  bank0c.cfg  bank0d.cfg  bank0e.cfg  bank0f.cfg  bank1a.cfg  bank1b.cfg  bank1d.cfg  bank1e.cfg  bank22.cfg  funcs.h
recomp/launcher/: boxart.tga
recomp/msu1/: ATTRIBUTION.md
scripts/: release-mac.sh
src/: banks.h  config.c  config.h  gen_stubs.c  main.c  opengl.c  post_mortem.c  post_mortem.h  variables.h  zelda.vcxproj  zelda.vcxproj.filters  zelda_00.c  zelda_cpu_infra.c  zelda_rtl.c  zelda_rtl.h  zelda_spc_player.c  zelda_spc_player.h
tools/: apply_msu_patch.py  apply_widescreen_overrides.py  build-linux.sh  build-macos.sh  make_release.ps1  play.ps1  regen.sh
